gccida/c1/finalize_type_size
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/finalize_type_size/src/stor-layout.c:1762:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *elements; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/finalize_type_size/src/stor-layout.c:1763:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/finalize_type_size/src/stor-layout.c:1764:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/finalize_type_size/src/stor-layout.c:1765:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/finalize_type_size/src/stor-layout.c:1784:42: error: use of undeclared identifier 'machine_mode'
type->type.align = get_mode_alignment( ( machine_mode)v2); 
                                         ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/finalize_type_size/src/obj/stor-layout.o] Error 1
